# portfolio-health-check-scenario-lab

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: runtime.py  system_prompts.py
backend/app/models/: schemas.py
backend/app/routes/: api.py
backend/app/services/: alpha_vantage.py  analytics.py  artifacts.py  cache.py  candidate_universe.py  dynamic_eda.py  eia.py  factor_analytics.py  factor_registry.py  feature_store.py  market_data.py  news_intel.py  orchestration.py  portfolio_intake.py  scenario.py  sec_edgar.py  series_registry.py  stock_dataset_builder.py  ticker_metadata.py
backend/app/services/ingestion/: bea.py  bls.py  census.py  factor_returns.py  finra.py  fred.py  sec_bulk.py
backend/app/tools/: agent_tools.py
backend/data/: candidate_universe.json
backend/data/tickers/: us_equities.json
backend/scripts/: bootstrap_sec_bulk.py  build_ticker_metadata.py  refresh_sec_company_data.py  sync_company_reference.py  sync_factor_returns.py  sync_finra.py  sync_macro_series.py
backend/tests/: test_agent_runtime.py  test_agent_tools.py  test_alpha_vantage.py  test_analytics.py  test_artifacts.py  test_database.py  test_dynamic_eda.py  test_eia.py  test_factor_data.py  test_ingestion_pipeline.py  test_news_intel.py  test_orchestration.py  test_scenario_candidate_search.py  test_schemas.py  test_stock_dataset_builder.py
frontend/: index.html  package-lock.json  package.json
qa/: failure_taxonomy.json  (+8 more)
(+27 files in other folders)
