[project]
name = "portfolio-health-check-backend"
version = "0.1.0"
description = "Backend for Portfolio Health Check + Research Overlay + Scenario Lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "numpy>=2.1.2",
  "pandas>=2.2.3",
  "scipy>=1.14.1",
  "matplotlib>=3.9.2",
  "python-multipart>=0.0.12",
  "openai-agents>=0.0.15",
  "psycopg[binary]>=3.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
